--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 10px 20px;
     text-align: center;
+    height:150px;
 }
 
 header h1 {
