--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 body {
     background-color: black;
-    color: #00FF00;
+    color: #0F0;
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 #matrixCanvas {
@@ -20,16 +17,22 @@ body {
 }
 
 .content {
-    flex-grow: 1;
+    position: relative;
     z-index: 1;
-    padding: 20px;
+    padding: 10px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+header, main, footer {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 header {
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px 20px;
     text-align: center;
-    height:150px;
 }
 
 header h1 {
@@ -38,17 +41,14 @@ header h1 {
 }
 
 nav a {
-    color: #00FF00;
+    color: #0F0;
     margin: 0 10px;
     text-decoration: none;
 }
 
-main {
-    padding: 20px 0;
-}
-
 h1, h2 {
-    color: #00FF00;
+    color: #0F0;
+    margin-top: 0;
 }
 
 ul {
@@ -57,16 +57,19 @@ ul {
 }
 
 li {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 a {
-    color: #00FF00;
+    color: #0F0;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 footer {
-    background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
-    padding: 10px 20px;
-    z-index: 1;
+    font-size: 0.9em;
 }
