--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 header, main, footer {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: black; /* Cambia a colore solido */
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
