--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    color: #0F0;
+    color: rgb(248, 250, 248);
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
@@ -25,7 +25,7 @@ body {
 }
 
 header, main, footer {
-    background-color: black; /* Cambia a colore solido */
+    
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -41,13 +41,13 @@ header h1 {
 }
 
 nav a {
-    color: #0F0;
+    color: rgb(249, 250, 249);
     margin: 0 10px;
     text-decoration: none;
 }
 
 h1, h2 {
-    color: #0F0;
+    color: rgb(244, 246, 244);
     margin-top: 0;
 }
 
@@ -61,7 +61,7 @@ li {
 }
 
 a {
-    color: #0F0;
+    color: rgb(253, 255, 253);
     text-decoration: none;
 }
 
