--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    color: rgb(248, 250, 248);
+    color: rgb(248, 250, 248) !important;
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
@@ -41,13 +41,13 @@ header h1 {
 }
 
 nav a {
-    color: rgb(249, 250, 249);
+    color: rgb(249, 250, 249) !important;
     margin: 0 10px;
     text-decoration: none;
 }
 
 h1, h2 {
-    color: rgb(244, 246, 244);
+    color: rgb(244, 246, 244) !important;
     margin-top: 0;
 }
 
@@ -61,7 +61,7 @@ li {
 }
 
 a {
-    color: rgb(253, 255, 253);
+    color: rgb(253, 255, 253) !important;
     text-decoration: none;
 }
 
