--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 header, main, footer {
-    
+    background-color: black;
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
