--- a/style.css
+++ b/style.css
@@ -74,3 +74,8 @@ footer {
     text-align: center;
     font-size: 0.9em;
 }
+
+
+p {
+    margin-bottom: 1.5em; /* Aggiusta il valore per modificare la distanza */
+}
