--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    color: rgb(248, 250, 248) !important;
+    color:rgba(0, 255, 0, 0.8) !important;
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
@@ -42,13 +42,13 @@ header h1 {
 }
 
 nav a {
-    color: rgb(249, 250, 249) !important;
+    color:rgba(0, 255, 0, 0.8) !important;
     margin: 0 10px;
     text-decoration: none;
 }
 
 h1, h2 {
-    color: rgb(244, 246, 244) !important;
+    color: rgba(0, 255, 0, 0.8) !important;
     margin-top: 0;
 }
 
@@ -62,7 +62,7 @@ li {
 }
 
 a {
-    color: rgb(253, 255, 253) !important;
+    color:rgba(0, 255, 0, 0.8) !important;
     text-decoration: none;
 }
 
