--- a/style.css
+++ b/style.css
@@ -79,3 +79,28 @@ footer {
 p {
     margin-bottom: 1.5em; /* Aggiusta il valore per modificare la distanza */
 }
+
+
+.matrix-button {
+    background-color: #000; /* Sfondo nero */
+    color: #00ff00; /* Testo verde Matrix */
+    border: 2px solid #00ff00; /* Bordo verde */
+    padding: 10px 20px;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    box-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00; /* Bagliore verde */
+}
+
+.matrix-button:hover {
+    background-color: #00ff00; /* Cambia lo sfondo a verde Matrix */
+    color: #000; /* Testo nero */
+    box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 40px #00ff00; /* Effetto glow più forte */
+}
+
+.matrix-button:active {
+    transform: scale(0.95); /* Effetto click */
+}
