--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ p {
 }
 
 
-.matrix-button {
+#matrix-button {
     background-color: #000; /* Sfondo nero */
     color: #00ff00; /* Testo verde Matrix */
     border: 2px solid #00ff00; /* Bordo verde */
@@ -95,12 +95,12 @@ p {
     box-shadow: 0 0 5px #00ff00, 0 0 15px #00ff00, 0 0 30px #00ff00; /* Bagliore verde */
 }
 
-.matrix-button:hover {
+#matrix-button:hover {
     background-color: #00ff00; /* Cambia lo sfondo a verde Matrix */
     color: #000; /* Testo nero */
     box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 40px #00ff00; /* Effetto glow più forte */
 }
 
-.matrix-button:active {
+#matrix-button:active {
     transform: scale(0.95); /* Effetto click */
 }
